--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,30 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-10 18:39:41 -0600 
+%% Created for Evan Bollig at 2013-11-14 14:36:36 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{Vladimirov2012,
+	Author = {Andrey Vladimirov},
+	Date-Added = {2013-11-14 20:33:44 +0000},
+	Date-Modified = {2013-11-14 20:36:06 +0000},
+	Institution = {Colfax International},
+	Month = {April},
+	Title = {Arithmetics on Intel's Sandy Bridge and Westmere CPUs: not all FLOPs are created equal},
+	Year = {2012}}
+
+@webpage{IntelGFLOPs,
+	Date-Added = {2013-11-14 18:34:24 +0000},
+	Date-Modified = {2013-11-14 18:35:49 +0000},
+	Lastchecked = {November 13, 2013},
+	Month = {May},
+	Title = {Chips on the Table: Sandy Bridge versus Westmere},
+	Url = {\nolinkurl{http://archive.hpcwire.com/hpcwire/2012-05-08/chips_on_the_table:_sandy_bridge_versus_westmere.html}},
+	Year = {2012}}
 
 @article{Patankar1972,
 	Author = {S.V Patankar and D.B Spalding},
