Added non-overlapping data

--- a/latex/conclusions.tex
+++ b/latex/conclusions.tex
@@ -36,7 +36,7 @@ Chapter~\ref{chap:distributed_rbffd} introduced the design and tuning of the fir
 \begin{itemize} 
 \item Our home-grown implementation of RBF-FD divides computation with a Restricted Additive Schwarz (RAS) domain decomposition. We depend on METIS \cite{Karypis1999} for grid partitioning and load balancing. Individual processes do not require a full mapping between RBF nodes and CPUs. Instead, processes assemble and operate on local linear systems for their subdomains. Communication between processes is limited to nearest-neighbor or all-to-subset collectives based on the intersection of subdomains.
 
-\item A number of steps are taken to improve communication collectives in the CPU-only implementation. The resulting algorithm splits derivative calculation into two steps and overlaps communication with computation. We observe that up to 80\% of the cost in communication can be hidden in some cases. 
+\item A number of steps are taken to improve communication collectives in the CPU-only implementation. The resulting algorithm splits derivative calculation into two steps and overlaps communication with computation. We observe that up to 80\% of the cost in communication can be hidden in some case, and the implementation achieves up to 220 GFLOP/sec on 1024 processors.
 
 \item Scaling benchmarks up to 1024 processes (divided into 8 processes per node) and a grid resolution of $N=160^3$ nodes (i.e., 4.1 million) prove that the overlapping communication and computation scales reasonably well in both a strong and weak sense for a moderate number of processors (e.g., $p \leq 256$). We achieve 30\% to 40\% parallel efficiency (both strong and weak) on $p=128$ processors when given a problem size of $N=160^3$ nodes and stencil sizes between $n=17$ and $n=50$ on Itasca, the CPU-only HPC cluster at the University of Minnesota. %Scaling beyond $p > 256$ processors shows 
 
@@ -45,12 +45,12 @@ Chapter~\ref{chap:distributed_rbffd} introduced the design and tuning of the fir
 \item Chapter~\ref{chap:multigpu_rbffd} extended the work on GPUs to distribute RBF-FD across a cluster of 32 GPUs (four per compute node). %To our knowledge, this is also the only known investigation in the broader RBF community to target multiple GPUs. 
 \begin{itemize} 
 \item The multi-GPU implementation is extended to a novel overlapping algorithm that naturally derives from our distributed CPU optimizations. Non-blocking MPI collectives plus two asynchronous OpenCL queues amortize the cost of data transfer between CPU and GPU, MPI communication, and in some cases a substantial amount of computation. Iterations of the resulting implementation achieve an average of 3x better strong scaling compared to a non-overlapping equivalent. 
-\item In some cases, overlapping communication and computation for the GPU exceeds our expectations for scaling. For example, in some cases non-overlapping communication faces serialization on memory transfers between CPU and GPU due to contention on I/O hubs connecting four GPUs per compute node to CPU sockets. The contention not only delays memory transfers but also leads to nearly serialized execution times across the four local GPUs per node. Overlapping communication and computation and fully leveraging GPU queues hides the contention, and in some cases avoids it altogether, resulting in over 4x speedup compared to the non-overlapped cases. 
+\item In some cases, overlapping communication and computation for the GPU exceeds our expectations for scaling. For example, in some cases non-overlapping communication faces serialization on memory transfers between CPU and GPU due to contention on I/O hubs connecting four GPUs per compute node to CPU sockets. The contention not only delays memory transfers but also leads to nearly serialized execution times across the four local GPUs per node. Overlapping communication and computation and fully leveraging GPU queues hides the contention, and in some cases avoids it altogether, resulting in over 4x speedup compared to the non-overlapped cases. The resulting code achieves approximately 130 GFLOP/sec on 32 GPU (4 per node).  
 \end{itemize} 
 
-\item In Chapter~\ref{chap:applications} our explicit solvers are applied to solve two well studied hyperbolic PDEs (Vortex Roll-up \cite{NairTransport05, NairJablonowski08} and Cosine Bell Advection \cite{JakobChien1995}).
+\item In Chapter~\ref{chap:applications}, our explicit solvers are applied to solve two well studied hyperbolic PDEs (Vortex Roll-up \cite{NairTransport05, NairJablonowski08} and Cosine Bell Advection \cite{JakobChien1995}).
 \begin{itemize} 
-\item Convergence studies confirm that hyperviscosity (\cite{Fornberg2011b}) stabilizes solutions.
+\item Convergence studies confirm that hyperviscosity (\cite{Fornberg2011b}) stabilizes RBF-FD solutions.
 \item Tuned parameters are provided for selecting the RBF support parameter and scaling hyperviscosity as a function of the problem size.
 \item Each test case is run in all compute environments (e.g., single CPU, multi-CPU, single GPU, and multi-GPU) in double precision. The expectation in each case is that the final solutions and errors will match the single CPU results up to 12 digits. In fact, the IEEE double precision floating point support on GPUs allows perfect reproduction of all CPU results. 
 \end{itemize}
